Fix OPTIONS CORS by bypassing JwtFilter